<resources>

    <!-- -->

    <!-- EXTRACTED STRING VALUES -->

    <string name="app_name">BuzzerBox</string>

    <string name="action_settings">Settings</string>

    <string name="buzzerbox">buzzerbox</string>

    <string name="text_placeholder_buzzerbox">buzzerbox</string>

    <string name="text_placeholder_test">Test</string>

    <!-- -->

    <!-- Login Splash Elements-->

    <string name="email">EMAIL*</string>

    <string name="password">PASSWORD*</string>

    <string name="forgot_password">Forgot password?</string>

    <string name="no_account">No Account? Create an account\nget.buzzerbox.net</string>

    <string name="text_login_title">buzzerbox</string>

    <string name="button_login_text">LOG IN</string>

    <string name="text_login_successful">Log In Successful</string>

    <!-- -->

    <!-- Alarm & Log Result Elements-->

    <string name="text_alarm_type">Placeholder Alarm Type Text</string>

    <string name="text_today">Today</string>

    <string name="title_overview">Overview</string>

    <string name="title_log">Log</string>

    <!-- -->

    <!-- LogOut Elements-->

    <string name="logout">Logout</string>

    <!-- -->



    <!-- FONTS -->

    <!-- Custom BuzzerBox Font Values -->

    <!-- Changing values here WILL ALSO CHANGE Named Design Elements below -->

    <!-- Fonts & Txt Type  -->

    <string name="buzzerbox_font_roboto_black">fonts/Roboto-Black.ttf</string>

    <string name="buzzerbox_font_roboto_bold">fonts/Roboto-Bold.ttf</string>

    <string name="buzzerbox_font_roboto_thin">fonts/Roboto-Thin.ttf</string>

    <string name="buzzerbox_font_roboto_medium">fonts/Roboto-Medium.ttf</string>

    <string name="buzzerbox_font_helvetica_neue">fonts/Helvetica-Neue.ttf</string>

    <!-- ICON FONT -->

    <string name="buzzerbox_font_icon_symbols">fonts/fontawesome.ttf</string>

    <!-- Full Icon List available at http://fontawesome.github.io/Font-Awesome/3.2.1/cheatsheet/  -->

    <!-- Speaker Icon value is (&#xf028;) -->

    <!-- Close View Large X Icon value is (&#xf00d;) -->

    <string name="icon_audio_speaker">&#xf028;</string>

    <string name="icon_close_view_large_x">&#xf00d;</string>

    <!-- -->


    <!-- -->

    <!-- Font Set Sorted By Named Design Elements for BuzzerBox -->

    <string name="buzzerbox_font_app_default">@string/buzzerbox_font_roboto_thin</string>

    <string name="buzzerbox_font_app_default_bold">@string/buzzerbox_font_roboto_bold</string>

    <string name="buzzerbox_font_app_default_thin">@string/buzzerbox_font_roboto_thin</string>

    <string name="buzzerbox_font_app_title">@string/buzzerbox_font_helvetica_neue</string>


    <!-- -->

    <!-- Buzz Data Result  >> Named Variable Elements-->

    <!-- may need to point to @/editText values when passing in real Buzz data-->

    <string name="txt_today">7</string>

    <string name="txt_today_int_value">7</string>


    <string name="txt_yesterday">Yesterday</string>

    <string name="txt_yesterday_int_value">0</string>


    <string name="txt_total_week">Total week</string>

    <string name="txt_total_week_int_value">12</string>


    <string name="txt_total_month">Total month</string>

    <string name="txt_total_month_int_value">12</string>


    <string name="txt_last_buzz">Last buzz</string>

    <string name="txt_last_buzz_int_value">20 m ago</string>


    <string name="txt_previous_buzz">2nd last buzz</string>

    <string name="txt_previous_buzz_int_value">20 m ago</string>


    <string name="txt_total">Total</string>

    <string name="txt_total_int_value">99</string>

    <string name="angle_bracket_less_than"><![CDATA[<  ]]></string>

    <string name="angle_bracket_greater_than"><![CDATA[  >]]></string>
    <string name="text_sound">Sound</string>
    <string name="text_color">Color</string>
    <string name="text_notifications">Alerts</string>
    <string name="text_frequency">Frequency</string>
    <string name="text_spinner_default">buzz</string>
    <string name="notify_by_email">Email</string>
    <string name="notify_by_phone">Phone</string>
    <string name="notify_by_text_sms">Text</string>
    <string name="notify_frequency_text_string_end">time(s)</string>
    <string name="notify_frequency_text_string_start">every</string>


    <!-- -->

    <!-- Spinner Values of Audio Sound FX used in layout_settings.xml -->

    <string-array name ="spinner_audio_files">
        <!--
        <item>Sound 1</item>
         <item>Sound 2</item>
         <item>Sound 3</item>
         <item>Sound 4</item>
         <item>Sound 5</item>
         <item>Sound 6</item>
         -->
        <item>Sound 1</item>
        <item>Sound 2</item>
        <item>Sound 3</item>
        <item>Sound 4</item>
        <item>Sound 5</item>
        <item>Sound 6</item>

    </string-array>

    <string-array name ="spinner_frequency">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>


    <!-- TEST Elements-->

    <string-array name="test_strings">

        <item>Error</item>

        <item>Sale</item>

        <item>Account Delete</item>

        <item>Account Created</item>

    </string-array>

    <!-- -->

</resources>
