<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/buzzerbox_blue"
              android:layout_gravity="center"
              android:gravity="center"
              android:id="@+id/login_layout">

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            >

        <TextView
                android:id="@+id/txt_login_title"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:text="@string/text_placeholder_buzzerbox"
                android:fontFamily="@string/buzzerbox_font_app_title"
                android:textColor="@color/buzzerbox_white"
                android:textSize="@dimen/buzzerbox_font_size_large"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginBottom="20dp"
                />

        <TextView
                android:id="@+id/txt_placeholder"
                android:text="@string/text_login_successful"
                android:fontFamily="@string/buzzerbox_font_app_default"
                android:textSize="@dimen/buzzerbox_font_size_medium"
                android:textColor="@color/buzzerbox_white"
                android:layout_width="260dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:layout_marginBottom="20dp"
                android:clickable="true"/>

    </LinearLayout>

</LinearLayout>
