<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:card_view="http://schemas.android.com/apk/res-auto"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:id="@+id/list_item"
              android:paddingTop="0dp">

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/card_overview"
            card_view:cardElevation="5dp"
            card_view:cardUseCompatPadding="true"
            card_view:cardCornerRadius="3dp">

        <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

            <ImageView
                    android:layout_column="0"
                    android:layout_row="0"
                    android:padding="10dp"
                    android:id="@+id/image_alarm_colour"
                    android:background="@drawable/unique_alarm_color_shape"
                    android:layout_height="30dp"
                    android:layout_width="30dp"
                    />
            <TextView
                    android:layout_column="1"
                    android:layout_row="0"
                    android:id="@+id/text_alarm_type"
                    android:layout_height="match_parent"
                    android:layout_width="160dp"
                    android:padding="10dp"
                    android:text="@string/text_alarm_type"
                    android:textSize="@dimen/buzzerbox_font_size_small"
                    android:fontFamily="@string/buzzerbox_font_app_default_bold"
                    android:singleLine="true"
                    android:ellipsize="marquee"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:textColor="@color/buzzerbox_black"
                    android:gravity="center_vertical"/>

            <TextView
                    android:layout_column="2"
                    android:layout_row="0"
                    android:id="@+id/text_last_buzz"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:padding="5dp"
                    android:text="@string/txt_last_buzz"
                    android:textSize="@dimen/buzzerbox_font_size_small"
                    android:fontFamily="@string/buzzerbox_font_app_default"
                    android:textColor="@color/buzzerbox_grey"
                    android:gravity="center_vertical"/>
            <TextView
                    android:layout_column="3"
                    android:layout_row="0"
                    android:id="@+id/text_last_buzz_int_value"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:padding="5dp"
                    android:text="@string/txt_last_buzz_int_value"
                    android:textSize="@dimen/buzzerbox_font_size_small"
                    android:fontFamily="@string/buzzerbox_font_app_default"
                    android:textColor="@color/buzzerbox_grey"
                    android:gravity="center_vertical"/>


        </GridLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>