<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

              android:orientation="vertical"

              android:layout_width="match_parent"

              android:layout_height="match_parent"

              android:background="@color/buzzerbox_white"

              android:id="@+id/open_log_detail_layout">


    <LinearLayout android:layout_width="match_parent"
                  android:id="@+id/open_log_title"
                  android:layout_height="wrap_content"

                  android:layout_gravity="left"

                  android:orientation="vertical"

                  android:background="@color/unique_alarm_color"
                  android:padding="5dp"
            >

        <GridLayout

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:layout_gravity="left"

                android:background="@color/unique_alarm_color"

                android:layout_margin="25dp"

                >



            <LinearLayout

                    android:layout_column="0"

                    android:layout_row="0"

                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"

                    android:orientation="horizontal">

                <TextView

                        android:layout_width="wrap_content"

                        android:layout_height="wrap_content"

                        android:id="@id/text_alarm_type"

                        android:text="@string/text_alarm_type"

                        android:fontFamily="@string/buzzerbox_font_app_default_bold"

                        android:textSize="@dimen/default_buzzerbox_font_size_medium"

                        android:textColor="@color/buzzerbox_black"

                        />





                <ImageView

                        android:background="@drawable/icon_audio_speaker"

                        android:textColor="@color/buzzerbox_black"

                        android:layout_width="30dp"

                        android:layout_height="30dp"

                        android:layout_column="1"

                        android:layout_row="0"

                        />




            </LinearLayout>

            <LinearLayout

                    android:layout_width="match_parent"

                    android:layout_height="match_parent"

                    android:layout_column="1"

                    android:layout_row="0"

                    android:gravity="right">



                <TextView

                        android:text="@drawable/icon_close_x"

                        android:textColor="@color/buzzerbox_black"

                        android:layout_width="24dp"

                        android:layout_height="24dp"

                        android:background="@drawable/icon_close_x"

                        />

            </LinearLayout>

            <LinearLayout

                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"

                    android:orientation="horizontal"

                    android:layout_column="0"

                    android:layout_row="1"

                    >

                <TextView

                        android:id="@+id/text_last_buzz"

                        android:layout_height="wrap_content"

                        android:layout_width="wrap_content"

                        android:text="@string/txt_last_buzz"

                        android:textSize="@dimen/default_buzzerbox_font_size_small"

                        android:fontFamily="@string/buzzerbox_font_app_default"

                        android:textColor="@color/buzzerbox_grey"

                        android:padding="5dp"

                        />

                <TextView

                        android:layout_column="2"

                        android:layout_row="1"

                        android:id="@+id/text_last_buzz_int_value"

                        android:layout_height="wrap_content"

                        android:layout_width="wrap_content"

                        android:text="@string/txt_last_buzz_int_value"

                        android:textSize="@dimen/default_buzzerbox_font_size_small"

                        android:fontFamily="@string/buzzerbox_font_app_default"

                        android:textColor="@color/buzzerbox_grey"

                        android:padding="5dp"

                        />

            </LinearLayout>

        </GridLayout>

    </LinearLayout>



    <GridLayout

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:padding="5dp"

            android:layout_gravity="left"

            android:layout_margin="20dp">

        <TextView

                android:layout_column="0"

                android:layout_row="1"

                android:id="@id/text_last_buzz"

                android:layout_height="wrap_content"

                android:layout_width="wrap_content"

                android:padding="5dp"

                android:text="@string/txt_last_buzz"

                android:textSize="@dimen/default_buzzerbox_font_size_small"

                android:fontFamily="@string/buzzerbox_font_app_default"

                android:textColor="@color/buzzerbox_grey"

                android:gravity="left"/>

        <TextView

                android:layout_column="1"

                android:layout_row="1"

                android:id="@id/text_last_buzz_int_value"

                android:layout_height="wrap_content"

                android:layout_width="wrap_content"

                android:padding="5dp"

                android:text="@string/txt_last_buzz_int_value"

                android:textSize="@dimen/default_buzzerbox_font_size_small"

                android:fontFamily="@string/buzzerbox_font_app_default"

                android:textColor="@color/buzzerbox_grey"

                android:gravity="left"/>

        <TextView

                android:layout_column="0"

                android:layout_row="2"

                android:id="@+id/text_previous_buzz"

                android:layout_height="wrap_content"

                android:layout_width="wrap_content"

                android:padding="5dp"

                android:text="@string/txt_previous_buzz"

                android:textSize="@dimen/default_buzzerbox_font_size_small"

                android:fontFamily="@string/buzzerbox_font_app_default"

                android:textColor="@color/buzzerbox_grey"

                android:gravity="left"/>

        <TextView

                android:layout_column="1"

                android:layout_row="2"

                android:id="@+id/text_previous_buzz_int_value"

                android:layout_height="wrap_content"

                android:layout_width="wrap_content"

                android:padding="5dp"

                android:text="@string/txt_previous_buzz_int_value"

                android:textSize="@dimen/default_buzzerbox_font_size_small"

                android:fontFamily="@string/buzzerbox_font_app_default"

                android:textColor="@color/buzzerbox_grey"

                android:gravity="left"/>

        <TextView

                android:layout_column="0"

                android:layout_row="3"

                android:id="@+id/text_today"

                android:layout_height="wrap_content"

                android:layout_width="match_parent"

                android:padding="5dp"

                android:text="@string/text_today"

                android:textSize="@dimen/default_buzzerbox_font_size_small"

                android:fontFamily="@string/buzzerbox_font_app_default"

                android:textColor="@color/buzzerbox_black"

                android:gravity="left"/>

        <TextView

                android:layout_column="1"

                android:layout_row="3"

                android:id="@+id/text_today_int_value"

                android:layout_height="wrap_content"

                android:layout_width="match_parent"

                android:padding="5dp"

                android:text="@string/txt_today_int_value"

                android:textSize="@dimen/default_buzzerbox_font_size_small"

                android:fontFamily="@string/buzzerbox_font_app_default"

                android:textColor="@color/buzzerbox_black"

                android:gravity="left"/>



        <TextView

                android:layout_column="0"

                android:layout_row="4"

                android:id="@+id/text_yesterday"

                android:layout_height="wrap_content"

                android:layout_width="match_parent"

                android:padding="5dp"

                android:text="@string/txt_yesterday"

                android:textSize="@dimen/default_buzzerbox_font_size_small"

                android:fontFamily="@string/buzzerbox_font_app_default"

                android:textColor="@color/buzzerbox_black"

                android:gravity="center_vertical"/>

        <TextView

                android:layout_column="1"

                android:layout_row="4"

                android:id="@+id/text_yesterday_int_value"
                android:layout_height="wrap_content"

                android:layout_width="match_parent"

                android:padding="5dp"

                android:text="@string/txt_yesterday_int_value"

                android:textColor="@color/buzzerbox_black"

                android:textSize="@dimen/default_buzzerbox_font_size_small"

                android:fontFamily="@string/buzzerbox_font_app_default"

                android:gravity="center_vertical"/>

        <TextView

                android:layout_column="0"

                android:layout_row="5"

                android:id="@+id/text_total_month"

                android:layout_height="wrap_content"

                android:layout_width="match_parent"

                android:padding="5dp"

                android:text="@string/txt_total_month"

                android:textColor="@color/buzzerbox_black"

                android:textSize="@dimen/default_buzzerbox_font_size_small"

                android:fontFamily="@string/buzzerbox_font_app_default"

                android:gravity="center_vertical"/>

        <TextView

                android:layout_column="1"

                android:layout_row="5"

                android:id="@+id/text_total_month_int_value"

                android:layout_height="wrap_content"

                android:layout_width="match_parent"

                android:padding="5dp"

                android:text="@string/txt_total_month_int_value"

                android:textColor="@color/buzzerbox_black"

                android:fontFamily="@string/buzzerbox_font_app_default"

                android:gravity="center_vertical"/>



        <TextView

                android:layout_column="0"

                android:layout_row="6"

                android:id="@+id/text_total_week"

                android:layout_height="wrap_content"

                android:layout_width="match_parent"

                android:padding="5dp"

                android:text="@string/txt_total_week"

                android:textColor="@color/buzzerbox_black"

                android:textSize="@dimen/default_buzzerbox_font_size_small"

                android:fontFamily="@string/buzzerbox_font_app_default"

                android:gravity="center_vertical"/>

        <TextView

                android:layout_column="1"

                android:layout_row="6"

                android:id="@+id/text_total_week_int_value"

                android:layout_height="wrap_content"

                android:layout_width="match_parent"

                android:padding="5dp"

                android:text="@string/txt_total_week_int_value"

                android:textColor="@color/buzzerbox_black"

                android:textSize="@dimen/default_buzzerbox_font_size_small"

                android:fontFamily="@string/buzzerbox_font_app_default"

                android:gravity="center_vertical"/>



        <TextView

                android:layout_column="0"

                android:layout_row="7"

                android:id="@+id/text_total"

                android:layout_height="wrap_content"

                android:layout_width="match_parent"

                android:padding="5dp"

                android:text="@string/txt_total"

                android:textColor="@color/buzzerbox_black"

                android:textSize="@dimen/default_buzzerbox_font_size_medium"

                android:fontFamily="@string/buzzerbox_font_app_default"

                android:gravity="center_vertical"/>

        <TextView


                android:layout_row="7"
                android:id="@+id/text_total_int_value"

                android:layout_height="wrap_content"

                android:layout_width="match_parent"

                android:padding="5dp"


                android:text="@string/txt_total_int_value"

                android:textColor="@color/buzzerbox_black"

                android:textSize="@dimen/default_buzzerbox_font_size_medium"

                android:fontFamily="@string/buzzerbox_font_app_default"

                android:gravity="center_vertical"/>

    </GridLayout>


    <!-- PLACEHOLDER CODE FOR LINE CHART DISPLAY -->

    <!--<LinearLayout-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="vertical"-->
            <!--android:layout_gravity="center"-->
            <!-->-->

        <!--&lt;!&ndash; START >>> BUZZ INFO LINE CHART &ndash;&gt;-->
        <!--<com.github.mikephil.charting.charts.LineChart-->
                <!--android:id="@+id/chart1"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_above="@+id/seekBar1" />-->

        <!--&lt;!&ndash; <<< END BUZZ INFO LINE CHART &ndash;&gt;-->
    <!--</LinearLayout>-->



</LinearLayout>