<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@color/blue"
              android:gravity="center"
              android:id="@+id/login_layout">

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            >

        <TextView
                android:id="@+id/txt_login_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:text="buzzerbox"
                android:textColor="@color/white"
                android:textSize="45dp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginBottom="20dp"
                />

        <EditText
                android:id="@+id/txt_username"
                android:hint="@string/email"
                android:layout_width="260dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:background="@color/white"
                android:textColorHint="@color/grey"
                android:textColor="@color/black"
                android:layout_marginBottom="20dp"
                />
        <EditText
                android:id="@+id/txt_password"
                android:hint="@string/password"
                android:password="true"
                android:layout_width="260dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:background="@color/white"
                android:textColorHint="@color/grey"
                android:textColor="@color/black"
                android:layout_marginBottom="20dp"
                />

        <Button
                android:id="@+id/btn_forgot_password"
                android:layout_width="260dp"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:text="@string/forgot_password"
                android:background="@null"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:textAlignment="center"
                android:layout_marginBottom="20dp"
                />

        <Button
                android:id="@+id/btn_login"
                android:text="Log In"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:layout_width="260dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:background="@drawable/buttonshape"
                android:layout_marginBottom="20dp"
                />

        <Button
                android:id="@+id/btn_create_account"
                android:layout_width="260dp"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:text="@string/no_account"
                android:background="@null"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:textAlignment="center"
                android:layout_marginBottom="20dp"
                ></Button>


    </LinearLayout>

</LinearLayout>
